# astbss

./: .gitattributes  CLAUDE.md  Coding-Rules-and-Guidelines.md  EntraID-oAuth2-Security.md  Linux-Security.md  Python.gitattributes  Python.gitignore  README.md  claude.md  install_ubuntu_basics.sh
Docker/: Dockerfile.7.2-apache  Dockerfile.7.2-nginx  Dockerfile.7.3-apache  Dockerfile.7.3-apache.txt  Dockerfile.7.4-apache  Dockerfile.7.4-apache-prod  Dockerfile.7.4-laravel  Dockerfile.7.4.4-apache  Dockerfile.debian-fail2ban  Dockerfile.debian-network  Dockerfile.debian-vpn  Dockerfile.debian-wireguard  Dockerfile.mariadb  Dockerfile.openvpn  Dockerfile.openvpn.2.3.4  Dockerfile.php-asterisk-test  Dockerfile.php7.2-asterisk-13.17.1  Dockerfile.php7.4-asterisk-16.9  Dockerfile.python3.7  README.md  build-asterisk.sh  build-asterisk16.sh
Docker-Powershell/: Dockerfile  Dockerfile.ad-domain-controller  statefulset-powershell-local.yaml
Docker-Python/: Dockerfile  Dockerfile.python.3.11  Dockerfile.python.3.13  Dockerfile.python.3.9  Dockerfile.python3.7.2  Dockerfile.python3.7.5  Dockerfile.python3.7.5.b  Dockerfile.python3.7.6  Dockerfile.python_init3.7  Dockerfile.python_php  README.1st  README.md  build3.11.sh  build3.13.sh  build3.13_sudo.sh  build3.7.sh  build3.9.sh  install-python-bash.sh  requirements.3.7.txt  requirements.3.9.txt  requirements.txt  requirements3.11.txt  requirements3.13.txt  requirements_3.7.5.b.txt  requirements_3.9.txt
Docker-uv-Python/: Dockerfile  README.md  install_ubuntu_basics.sh  install_uv_deps.sh  main.py  pyproject.toml
Docker/Asterisk/: Create-Docker.sh  Dockerfile-13.17.1b  Dockerfile.13.17.1  Dockerfile.13.17.1-src  Dockerfile.13.24.1  Dockerfile.13.24.1.php  Dockerfile.7.2-apache  Dockerfile.php.13.17.1  Dockerfile.php7.2-alpine3.8  Dockerfile.php7.2-asterisk-13.17.1  Dockerfile.php7.2-asterisk-13.24.1  build-asterisk.sh  docker-compose.yml
Docker/Asterisk/debian-9/: asterisk-entrypoint  asterisk-entrypoint.sh  odbcinst.ini  resolv.conf  safe_asterisk
Docker/debian-9/: asterisk-entrypoint  odbc.ini  replication.conf
Docker/files/: authorized_keys
Kubernetes/: README.md  cafe.yaml  kex  kex2  kubernetes_aliases.txt  networkpod-macvlan.yaml  networkpod.yaml  nginx-recreate.yaml  nginx-replicas-3.yaml  powershell.yaml  tcp-echo-diamonset.yaml  tcp-echo-pod.yaml  tcp-echo-service.yaml
Kubernetes/netbox/: netbox.yaml  postgres.yaml
images/: build-are.png:Zone.Identifier  build-v1.png:Zone.Identifier  build-v2.png:Zone.Identifier
windows/: README.md  codex.ps1  install_windows11_step1.ps1  regedit_CredentialsDelegation.reg  step1_upgrade.ps1  step2_install_wsl2.ps1  step3_install_apps.ps1  windows_terminal_settings.json  winget_win10.ps1
windows/azchohfi/: azchohfi.admin.dsc.yaml  azchohfi.user.dsc.yaml
windows10/: README.md  windows_terminal_settings.json  winget_win10.ps1
