[project]
name = "shared-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-cosmos>=0.2.4",
    "aiohttp[speedups]>=3.12.13",
    "async-timeout>=5.0.1",
    "asyncio>=3.4.3",
    "asyncio-periodic>=2019.2",
    "asyncmy>=0.2.10",
    "autopep8>=2.3.2",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.23.0",
    "azure-keyvault-certificates>=4.10.0",
    "azure-keyvault-keys>=4.11.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-compute>=34.1.0",
    "azure-mgmt-containerregistry>=14.0.0",
    "azure-mgmt-dns>=8.2.0",
    "azure-mgmt-keyvault>=11.0.0",
    "azure-mgmt-network>=29.0.0",
    "azure-mgmt-privatedns>=1.2.0",
    "azure-mgmt-rdbms>=10.1.0",
    "azure-mgmt-resource>=24.0.0",
    "azure-mgmt-storage>=23.0.1",
    "azure-mgmt-web>=9.0.0",
    "azure-storage-blob>=12.25.1",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "cachetools>=6.1.0",
    "click>=8.2.1",
    "connexion[swagger-ui]>=3.2.0",
    "cryptography>=45.0.5",
    "deepdiff>=8.5.0",
    "dictdiffer>=0.9.0",
    "email-validator>=2.2.0",
    "fabric>=3.2.2",
    "faker>=37.4.0",
    "fastapi>=0.115.14",
    "fastapi-mail>=1.5.0",
    "fastparquet>=2024.11.0",
    "flake8>=7.3.0",
    "flask>=2.0,<3.0",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-httpauth>=4.8.0",
    "flask-limiter>=3.12",
    "flask-mail>=0.10.0",
    "flask-restful>=0.3.10",
    "flask-seasurf>=2.0.0",
    "flask-session>=0.8.0",
    "flask-wtf>=1.2.2",
    "greenstalk>=2.0,<3.0",
    "gunicorn[gevent]>=23.0.0",
    "haikunator>=2.1.0",
    "hcloud>=2.5.3",
    "htpasswd>=2.3",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "hurry-filesize>=0.9",
    "jwt>=1.4.0",
    "kubernetes>=33.1.0",
    "ldap3>=2.9.1",
    "libgravatar>=1.0.4",
    "markdown2>=2.5.3",
    "mock>=5.2.0",
    "msgraph-sdk>=1.36.0",
    "msrestazure>=0.6.4.post1",
    "names>=0.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "passlib>=1.7.4",
    "password-validation>=0.1.1",
    "pexpect>=4.9.0",
    "phonenumbers>=9.0.8",
    "phonenumberslite>=9.0.8",
    "pillow>=11.3.0",
    "prettytable>=3.16.0",
    "psycopg[binary]>=3.2.9",
    "ptyprocess>=0.7.0",
    "py-daemon>=0.1.2",
    "pycountry>=24.6.1",
    "pycryptodome>=3.23.0",
    "pylint>=3.3.7",
    "pymssql>=2.3.6",
    "pymsteams>=0.2.5",
    "pymysql>=1.1.1",
    "pyodbc>=5.2.0",
    "pyopenssl>=25.1.0",
    "pypsrp[credssp,kerberos]>=0.8.1",
    "pyreadline3>=3.5.4",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-describe>=2.2.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "python-redis-cache>=4.0.2",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "requests-oauthlib>=2.0.0",
    "rich>=13.9.4",
    "ruff>=0.12.2",
    "schedule>=1.2.2",
    "setuptools>=80.9.0",
    "shortuuid>=1.0.13",
    "sqlalchemy>=2.0.41",
    "tables>=3.10.2",
    "tabulate>=0.9.0",
    "talisman>=0.1.0",
    "timeago>=1.0.16",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "ujson>=5.10.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
    "var-dump>=1.2",
    "wheel>=0.45.1",
    "xlsxwriter>=3.2.5",
]
